# dependency

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
_foundation/: __init__.py  _json.py  _json.pyi  _log.py  _log.pyi  _os_name_get.py  _os_name_get.pyi
json/: dependency_load_modules.json
modules/_SQLite3/: _SQLite3.py  __init__.py
modules/_pygame/: README.md  __init__.py  _font.py  _image.py  _key_mapping.py  _music.py  _music.pyi  _sound.py  _sound.pyi  _window.py
modules/_pyside6/: __init__.py  _app.py  _component.py  _get_package.py  _window.py
modules/_tkinter/: README.md  __init__.py  _component.py  _window.py
src/dependency/: __init__.py
src/dependency/_foundation/: README.md  __init__.py  _json.py  _json.pyi  _log.py  _log.pyi  _log_template.py  _log_type.py  _os_name_get.py
src/dependency/modules/_QR/: __init__.py  _qr.py
src/dependency/modules/_SQLite3/: SQL_All_Command.md  SQLite_All_Command.md  __init__.py
src/dependency/modules/_file_operations/: README.md  __init__.py  _csv.py  _file.py  _get_package.py  _ini.py  _interpreter.py  _json.py  _path.py  _toml.py  config.py  f_csv.py  f_ini.py  f_json.py  f_toml.py
src/dependency/modules/_pygame/: __init__.py  _font.py  _image.py  event_compare.md  key_mapping.md
src/dependency/modules/_pyside6/: _app.py  _component.py  _ui_file.py
src/dependency/modules/_tkinter/: __init__.py  _component.py  _get_package.py
test/_file_operations/: test_csv.py  test_ini.py  test_json.py  test_toml.py
